gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/nogc2.d
version https://git-lfs.github.com/spec/v1
oid sha256:a6276c276d4db881ee4733391fd67f95bebfe76863430cbac3b2b1a072f50fb1
size 2943
